almost at end of solid accretion

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -556,10 +556,10 @@ La soluzione auto-similare di \ref{eq:sigmaevol} con raggio caratteristico $R_c$
 \Sigma(\mathcal{R},\mathcal{T})\propto\mathcal{R}\expy{-\gamma}\mathcal{T}\expy{-\frac{5/2-\gamma}{2-\gamma}}\exp{-\frac{\mathcal{R}\expy{2-\gamma}}{\mathcal{T}}}\label{eq:selsimdiskevol}
 \end{equation}
 con
-\begin{align*}
+\begin{align}
 &\mathcal{R}=\frac{r}{R_c}
 &\mathcal{T}=\frac{t}{t_c}\ t_c=\frac{1}{3(2-\gamma)^2}\frac{R_c^2}{\nu(R_c)}
-\end{align*}
+\end{align}
 
 %\begin{tikzpicture}	
 %\begin{loglogaxis}[
