--- a/seminario.bib
+++ b/seminario.bib
@@ -61,6 +61,18 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{ida1993scattering,
+	title={Scattering of planetesimals by a protoplanet: Slowing down of runaway growth},
+	author={Ida, Shigeru and Makino, Junichiro},
+	journal={Icarus},
+	volume={106},
+	number={1},
+	pages={210--227},
+	year={1993},
+	publisher={Elsevier}
+}
+
+
 @article{ikoma2000formation,
   title={Formation of giant planets: dependences on core accretion rate and grain opacity},
   author={Ikoma, Masahiro and Nakazawa, Kiyoshi and Emori, Hiroyuki},
@@ -378,6 +390,28 @@ pages={1282},
   pages={1139--1160},
   year={2009},
   publisher={EDP Sciences}
+}
+
+@article{rafikov2003planetesimal,
+	title={Planetesimal disk evolution driven by planetesimal-planetesimal gravitational scattering},
+	author={Rafikov, Roman R},
+	journal={The Astronomical Journal},
+	volume={125},
+	number={2},
+	pages={906},
+	year={2003},
+	publisher={IOP Publishing}
+}
+
+@article{thommes2003oligarchic,
+	title={Oligarchic growth of giant planets},
+	author={Thommes, Edward W and Duncan, Martin J and Levison, Harold F},
+	journal={Icarus},
+	volume={161},
+	number={2},
+	pages={431--455},
+	year={2003},
+	publisher={Elsevier}
 }
 
 
