--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -15,8 +15,13 @@ Once the mass of runaway body is isolated from continuus powe-law mass distribut
 	\end{itemize}
 \end{workout}
 
-\section{Condizioni iniziali ed evoluzione componente solida}
+\section{Condizioni iniziali componente solida: efficienza massima formazione planetesimi}
 %\section{Distribuzione iniziale planetesimi ed evoluzione}
+
+\begin{workout}[conversione polvere in planetesimi??]
+Armitage
+Perryman
+\end{workout}
 
 Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
 \begin{equation}
@@ -36,62 +41,35 @@ p([Fe/H])=\frac{1}{\sigma\sqrt{2\pi}}\exp{-\frac{([Fe/H]-\mu)^2}{2\sigma^2}}
 \end{equation}
 Per le stelle campionate da CORALIE (\cite{udry2000coralie}, 1650 stelle nane entro \SI{50}{\parsec}) si ha $\mu=-0.02$ e $\sigma=0.22$.
 
-L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento sugli embrioni planetari
-\begin{equation}\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pi a_p^2B_LM_p\expy{1/3}}\dot{M}_c\end{equation}
-e generalmente si assume che eccentricit\'a e inclinazione seguono distribuzione di Rayleigh.
+\begin{workout}[quale distribuzione per $f_{dg}$]
 
-Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap nella distribuzione dei planetesimi sono di solito trascurati.
+\end{workout}
 
-%\section{Caratteristiche iniziali degli embrioni planetarii e accrescimento}
+%Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap nella distribuzione dei planetesimi sono di solito trascurati.
 
-La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano 20-50 embrioni di frazioni di massa terrestre ($0.01-0.1\mearth{}$); la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
+\section{Accrescimento planetesimi su embrioni planetari}
+(Vedi \cite{kokubo2012dynamics})
+\begin{workout}[Some refs about planetesimal accretion]
+	\begin{itemize}
+		\item ida, guillot, morbidelli 08: accretion and destruction of planetesimal in turbulent disks.
+		\item rafikov 04: Fast accretion of planetesimal by protoplanet cores. Drag regimes; mass spectrum of solid body
+		\item rafikov 02: growth of planetary embryos: orderly, runaway, or oligarchic?
+		\item kokubo ida 12: Dynamics and accretion of planetesimal. Tempi caratteristici.
+		\item hasegawa pudritz 14: planet traps and planet cores: origin of planet metallicity correlation.
+		\item coulomb logarithm in planetesimal scattering \cite{rafikov2003planetesimal} (eqs 71-72)
+	\end{itemize}
+\end{workout}
 
-La massa dei core varia per l'accrescimento dei planetesimi secondo
-\begin{align}
-	&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G
-	%&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
-\end{align}
-
-Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
-\begin{align}
-	&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
-	&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
-\end{align}
-dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
-
-%{\let\clearpage\relax\let\cleardoublepage\relax
-%\chapter{Schema di accrescimento componente solida: formazione planetesimi - da riassumere nel capitolo ''schema CA a volo d'uccello''}
-%}
-
-%\section{Sedimentazione polvere e formazione planetesimi}
-
-%Assumo  sedimenta verso il centro del disco e forma aggregati di dimensioni maggiori:
-
-%\section{Accrescimento planetesimi: formazione proto-pianeti.}
-
-Assumiamo quindi che la polvere condensi in planetesimi con densit\'a superficiale $\Sigma_p$.
-\subsection{Distribuzione velocit\'a planetesimi}
-%Refs: kokubo Ida 12 `'Dynamics and accretion of planetesimal''
 La distribuzione di velocit\'a dei planetesimi, che percorrono orbite kepleriane, evolve attraverso interazione con gas, che smorza eccentricit\'a e inclinazione, e scattering, che trasforma il moto kepleriano in casuale.
-
-%e si ha equipartizione di energia tra pianetesimi di diversa massa
-%i planetesimi di massa minore hanno maggiore dispersione di velocit\'a 
-%due planetesimi hanno stessa velocit\'a relativa prima e dopo interazione ma aumenta la velocit\'a relativa al moto kepleriano in maniera casuale: 
-%\'E ragionevole supporre che si arrivi rapidamente alla condizione $v>\Omega R_H$.
-
-%v deviazione dei planetesimi da velocit\'a kepleriana
 La componente casuale della velocit\'a v dei planetesimi \'e approssimativamente
 \begin{equation}
 v\approx\sqrt{e^2+i^2}v_K
 \end{equation}
-dove si assume che eccentricit\'a e inclinazione seguano distribuzione di Rayleigh (\cite{ida1992n})
+Un ensamble di planetesimi evolve tramite quello che viene definito viscous stirring verso configurazione di eccentricit\'a e inclinazione che seguano distribuzione di Rayleigh
 \begin{equation}
 f(e,i)=4\frac{\Sigma_p}{m}\frac{ei}{\exv{e^2}\exv{i^2}}\Exp{-\frac{e^2}{\exv{e^2}}-\frac{i^2}{\exv{i^2}}}
 \end{equation}
-I valori iniziali sono $\exv{i^2}=\exv{e^2}=[2\frac{r_H}{a}]^2$, il loro aumento, determinato da interazioni gravitazionali \'e chiamato viscous stirring, mentre , una volta formato un corpo molto pi\'u massiccio degli altri (embrione planetario), l'equipartizione di energia tra il corpo massiccio e i planetesimi produce diminuzione di eccentricit\'a/inclinazione dell'embrione planetario a scapito di aumento di queste per i corpi di massa minore, questo fenomeno \'e detto dynamical friction. (\cite{kokubo2012dynamics})
-%la velocit\'a relativa media aumenta fino al valore della velocit\'a di fuga dal corpo maggiore, denominato protopianeta raggiunto diametro migliaia di kilometri.
- 
-\subsection{Regimi accrescimento dei protopianeti}
+e la dispersione di velocit\'a varia $\sigma\propto t\expy{1/4}$ fino a che non si raggiunge equilibrio con smorzamento da parte del disco di gas.
 
 L'accrescimento di massa degli embioni planetari procede, in approssimazione di interazione a 2 corpi, secondo
 \begin{equation}
@@ -103,140 +81,193 @@ F_g=(1+(\frac{v_e}{v})^2)
 \end{equation}
 $v$ velocit\'a relativa e $v_e$ velocit\'a di fuga, $\rho_{pl}$ densit\'a di planetesimi
 \begin{align}
-&\rho_{pl}\approx\frac{\Sigma_p}{2a\sin{i}}=A\frac{\Sigma_p\Omega}{v}
+	&\rho_{pl}\approx\frac{\Sigma_p}{2a\sin{i}}=A\frac{\Sigma_p\Omega}{v}
 \end{align}
 dove A dipende dalle propriet\'a della distribuzione di velocit\'a dei planetesimi.
-% Costante proporzionalit\'a \'e $\frac{\sqrt{3}}{2}$ assumendo relazione di dispersione per velocit\'a planetesimi isotropa.
+%la velocit\'a relativa media aumenta fino al valore della velocit\'a di fuga dal corpo maggiore, denominato protopianeta raggiunto diametro migliaia di kilometri.
 
-Per embrioni planetarii di decine di chilometri l'attrazione gravitazionale aumenta la sezione d'urto: 
+Nella prima fase di accrescimento runaway si produce una distribuzione di massa di planetesimi esponenziale per la densit\'a numerica di planetesimi
 \begin{equation}
-\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}
+\TDy{m}{n_p}\propto m\expy{\alpha}
 \end{equation}
-questo regime di accrescimento (runaway growth) \'e responsabile crescita diametro embrioni da \SI{10}{\kilo\meter} a \SI{100}{\kilo\meter} in \SIrange{e4}{e5}{\year}.
-%(higher radial excursion ae)
-Quando la massa degli embrioni domina su quella dei planetesimi si ha transizione a regime oligarchico in cui l'accrescimento \'e pi\'u lento fino a che non \'e stata accresciuta la massa presente nella zona di pertinenza gravitazionale dell'embrione,detta isolation mass (\cite{lissauer1993planet}):
+e alcuni corpi decisamente pi\'u massicci di massa $M_e$. L'accrescimento di massa relativo nel regime runaway \'e della forma
+\begin{equation}
+\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}\label{eq:runawayaccretion}
+\end{equation}
+La massa dei planetesimi domina il sistema.
+L'evoluzione orbitale di quelli che diventeranno embrioni planetari \'e caratterizzata da separazione orbitale $\Delta>5r_h$ e piccola velocit\'a casuale. 
+
+\cite{ida1993scattering} hanno studiato il regime di accrescimento in cui l'embrione planetario \'e diventato sufficientemente massiccio da dominare l'evoluzione della velocit\'a casuale dei planetesimi
 \begin{align}
-&M_{iso}=\frac{(4\pi Br^2\Sigma_p)\expy{3/2}}{(3M_*)\expy{1/2}}=\num{2.10e-3}(\frac{Br^2\Sigma_p}{2\sqrt{3}})\expy{3/2}(\frac{\msun{}}{M_*})\expy{1/2}\mearth{}
+&2\Sigma_MM>\Sigma_mm\\
+&\Sigma_M=\frac{M}{2\pi a\Delta a_{stir}}
 \end{align}
+e $\Delta a_{stir}\propto\exv{e_M}\expy{1/2}\propto M_e\expy{1/3}$ \'e la larghezza dell'anello di planetesimi in cui \'e efficace il viscous stirring dell'embrione planetario. Questa fase di accrescimento \'e detta oligarchica e si ha
+\begin{equation}
+\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}\label{eq:oligarchicaccretion}
+\end{equation}
+La simulazione inizia quindi alla fine dell'accrescimento runaway con la determinazione della posizione iniziale degli embrioni planetari, di massa $\numrange{e-8}{e-2}\mearth$, scelta in maniera casuale: la probabilit\'a $p(a)\,da$ che l'embrione si sia formato in intervallo $da$ \'e inversamente proporzionale alla distanza orbitale $\Delta\propto a$ quindi la distribuzione \'e uniforme in $\log{a}$ tra \SIrange{0.05}{40}{\astronomicalunit}, verificato che il contenuto di solidi della sua fascia di accrescimento sia maggiore della sua massa:
+\begin{equation}
+M_{iso}=2\pi a_{start}B_LR_h\Sigma_p=\frac{(4\pi B_La_{start}^2\Sigma_p)\expy{3/2}}{(3M_*)\expy{1/2}}
+\end{equation}
+%$p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$
+L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento sugli embrioni planetari
+\begin{equation}
+\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pi a_p^2B_LM_p\expy{1/3}}\dot{M}_c\label{eq:surfaceplanetesimal}
+\end{equation}
+Il tempo di comparsa dell'embrione planetario, tempo per accrescere massa iniziale fissata, \'e determinato risolvendo \ref{eq:surfaceplanetesimal} e \ref{eq:Gaccretionpl}.
+
+\begin{workout}[Calculation of planetesimal random velocity for accretion time]
+Pollack 96
+Greenzweig Lissauer 92
+\end{workout}
+\begin{workout}[Accretion timescale]
+\begin{equation}
+\tau_{acc}\approx\SI{1.2e5}{\year}(\frac{\Sigma_p}{\SI{10}{\gram\per\square\cm}})\expy{-1}(\frac{a_p}{\SI{1}{\astronomicalunit}})\expy{1/2}(\frac{M_c}{\mearth})\expy{1/3}(\frac{M_*}{\msun})\expy{-1/6}[(\frac{\Sigma_g}{\SI{2400}{\gram\per\square\cm}})\expy{-1/5}(\frac{a_p}{\SI{1}{\astronomicalunit}})\expy{1/20}(\frac{m}{\SI{e18}{\gram}})\expy{1/15}]^2
+\end{equation}
+\end{workout}
+La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano 20-50 embrioni di frazioni di massa terrestre ($0.01-0.1\mearth{}$); la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
+
+La simulazione termina dopo \SI{10}{\mega\year}; la fase finale di crescita caotica evolve il sistema verso una configurazione dinamica stabile ed ha tempi tipici di \SIrange{10}{100}{\mega\year}.
+
+% Costante proporzionalit\'a \'e $\frac{\sqrt{3}}{2}$ assumendo relazione di dispersione per velocit\'a planetesimi isotropa.
+%Per embrioni planetarii di decine di chilometri l'attrazione gravitazionale aumenta la sezione d'urto: 
+%\begin{equation}
+%\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}
+%\end{equation}
+%questo regime di accrescimento (runaway growth) \'e responsabile crescita diametro embrioni da \SI{10}{\kilo\meter} a \SI{100}{\kilo\meter} in \SIrange{e4}{e5}{\year}.
+%(higher radial excursion ae)
+%La massa dei core varia per l'accrescimento dei planetesimi secondo
+%\begin{align}
+%	&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G
+%	%&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+%\end{align}
+
+\begin{workout}[Transizione accrescimento oligarchico]
+	Transition to oligarchic growth (\cite{thommes2003oligarchic}): dominance of protoplanet-planetesimal scattering: $2\Sigma_MM>\Sigma_mm$ $\Sigma_M=\frac{M}{2\pi a\Delta a_{stir}}$
+\end{workout}
+
+\begin{errata}[Valori medi iniziali e,i]
+	I valori iniziali sono $\exv{i^2}=\exv{e^2}=[2\frac{r_H}{a}]^2$
+\end{errata}
+
+\begin{workout}[Oligarchic growth is more important in terms of mass accretion than runaway growth]
+
+\end{workout}
 
 \begin{workout}[Isolation mass:]
-kokubo ida 12:
-\[M_{iso}\approx2\pi ab\Sigma_d=0.16f_d\expy{3/2}\epsilon_{ice}\expy{3/2}(\frac{b}{10r_h})\expy{3/2}(a(\si{\astronomicalunit}))\expy{3/4}(\frac{M_*}{\msun{}})\expy{-1/2}\mearth{}\]
-\begin{equation}
-M_{iso}\propto M_*\expy{-1/2}\Sigma_p\expy{3/2}r^3
-\end{equation}
-\end{workout}
-
-La fase finale di crescita caotica evolve il sistema verso una configurazione dinamica stabile ed ha tempi tipici di \SIrange{10}{100}{\mega\year}.
-
-\begin{workout}[oligarchic growth rate]
-La fase successiva che porta a dimensioni di migliaia di chilometri, accrescimento oligarchico ha andamento in funzione della massa
-\begin{equation}
-\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}
-\end{equation}
-e tempo caratteritico $\SI{e5}{\year}$. Nel dettaglio \'e determinata 
-\end{workout}
-
-\begin{workout}[Dynamical friction]
-Dynamical friction: stewart wetherill 88
-\end{workout}
-
-\begin{workout}[Dynamical evolution of planetesimal swarm: refs]
-Accretional evolution of planetesimal swarm (weidenschilling 97)
-Goldreich 2004: Planet Formation by Coagulation: A Focus on Uranus and Neptune
-Goldreich 04: FINAL STAGES OF PLANET FORMATION
-rafikov 03: DYNAMICAL EVOLUTION OF PLANETESIMALS IN PROTOPLANETARY DISKS.
-rafikov 02: The growth of planetary embryos: orderly, runaway, or oligarchic?
-thommes 03: Oligarchic growth of giant planets
-\end{workout}
-
-\begin{workout}[10m-10km, 100km-1000km, 1000km-10000km: refs]
-Lissauer pg 142-143
-Perryman pg 226
-\end{workout}
-
-\begin{workout}[Planetesimal dynamics: viscous stirring]
-The origin of anisotropic velocity dispersion of particles in a disc potential (Ida, Makino 93, Stewart-Wetherill 1988 Ida1990)
-\end{workout}
-
-\begin{workout}[Gravitational stirring: Viscous stirring and dynamical friction]
-\begin{itemize}
-\item Viscous stirring increses i,e
-\item Dynamical stirring: tends to equalize energy of random motion among bodies having different masses and velocities
-\end{itemize}
-\end{workout}
-
-\begin{workout}[orbital elements distribution: rayleigh distro]
-I planetesimi hanno distribuzione di velocit\'a casuale, localmente equivalente a
-\begin{equation}
-f(e,i)=4\frac{\sigma}{m}\frac{ei}{\exv{e^2}\exv{i^2}}\Exp{[-\frac{e^2}{\exv{e^2}}-\frac{}{\exv{i^2}}]}
-\end{equation}
-\'e una distro gaussiana triassiale in coordinate cilindriche (Lissauer Stewart 93)
-Lissauer pg 142-143
+	Quando la massa degli embrioni domina su quella dei planetesimi si ha transizione a regime oligarchico in cui l'accrescimento \'e pi\'u lento fino a che non \'e stata accresciuta la massa presente nella zona di pertinenza gravitazionale dell'embrione,detta isolation mass (\cite{lissauer1993planet}):
+	\begin{align}
+		&M_{iso}=\frac{(4\pi Br^2\Sigma_p)\expy{3/2}}{(3M_*)\expy{1/2}}=\num{2.10e-3}(\frac{Br^2\Sigma_p}{2\sqrt{3}})\expy{3/2}(\frac{\msun{}}{M_*})\expy{1/2}\mearth{}
+	\end{align}
+	kokubo ida 12:
+	\[M_{iso}\approx2\pi ab\Sigma_d=0.16f_d\expy{3/2}\epsilon_{ice}\expy{3/2}(\frac{b}{10r_h})\expy{3/2}(a(\si{\astronomicalunit}))\expy{3/4}(\frac{M_*}{\msun{}})\expy{-1/2}\mearth{}\]
+	\begin{equation}
+	M_{iso}\propto M_*\expy{-1/2}\Sigma_p\expy{3/2}r^3
+	\end{equation}
 \end{workout}
 
 \begin{workout}[Protoplanets accretion of solids]
-Other refs: Planet formation coagulation: focus on U,N (Goldreich 04), Final stages of planets formation (Goldreich 04), Formation of giant planets core: evaluating key processes (levison 09).
-Safronov69: $\dot{M}_c=\Omega\Sigma_pR^2_{capture}F_G$, $R_{capture}$ larger than core radius due to gas drag, $F_G(e,i)$ gravitational focus (give rise to different growth regimes: runaway, oligarchic, orderly).
-Runaway growth until protoplanets $100-1000km$ (dep on position).
-Oligarchic growth: velocity of planetesimal raised by viscous stirring (gravitational scattering)/ damped by gas (until disk present).
-Enhanced radius by atmospheric drag: Enhanced collisional growth of a protoplanet that has an atmosphere (Inaba Ikoma 03)
+	Other refs: Planet formation coagulation: focus on U,N (Goldreich 04), Final stages of planets formation (Goldreich 04), Formation of giant planets core: evaluating key processes (levison 09).
+	Safronov69: $\dot{M}_c=\Omega\Sigma_pR^2_{capture}F_G$, $R_{capture}$ larger than core radius due to gas drag, $F_G(e,i)$ gravitational focus (give rise to different growth regimes: runaway, oligarchic, orderly).
+	Runaway growth until protoplanets $100-1000km$ (dep on position).
+	Oligarchic growth: velocity of planetesimal raised by viscous stirring (gravitational scattering)/ damped by gas (until disk present).
+	Enhanced radius by atmospheric drag: Enhanced collisional growth of a protoplanet that has an atmosphere (Inaba Ikoma 03)
 \end{workout}
 
 \begin{workout}[orderly growth]
-lissauer pg 144: equapartition effect saturation. This regime is never observed in simulations.
-\begin{equation}
-\frac{1}{m_p}\TDy{t}{m_p}\propto m_p\expy{-1/3}
-\end{equation}
+	lissauer pg 144: equapartition effect saturation. This regime is never observed in simulations.
+	\begin{equation}
+	\frac{1}{m_p}\TDy{t}{m_p}\propto m_p\expy{-1/3}
+	\end{equation}
 \end{workout}
 
 \begin{workout}[runaway growth]
-per planetesimi circa 1km (perch\'e?)
-\begin{equation}
-\frac{1}{m_p}\TDy{t}{m_p}\propto m_p\expy{1/3}
-\end{equation}
+	per planetesimi circa 1km (perch\'e?)
+	\begin{equation}
+	\frac{1}{m_p}\TDy{t}{m_p}\propto m_p\expy{1/3}
+	\end{equation}
 \end{workout}
 
 \begin{workout}[feeding zone: jacobi integral]
-Jacobi integral
-\begin{align}
-&E_J=\frac{1}{2}(e^2+i^2)a^2\Omega^2-\frac{3}{8}b^2\Omega^2+\frac{9}{2}R_H^2\Omega^2\\
-&\tilde{E}_J=\frac{E_J}{a^2h^2\Omega^2},\ h=R_H/a
-\end{align}
-Planetesimi con $\tilde{E}_J>0$ possono accrescere il protopianeta  cio\'e entro $w_{feed}=B_LR_H$, per orbite circolari $B_L=2\sqrt{3 }$.
+	Jacobi integral
+	\begin{align}
+		&E_J=\frac{1}{2}(e^2+i^2)a^2\Omega^2-\frac{3}{8}b^2\Omega^2+\frac{9}{2}R_H^2\Omega^2\\
+		&\tilde{E}_J=\frac{E_J}{a^2h^2\Omega^2},\ h=R_H/a
+	\end{align}
+	Planetesimi con $\tilde{E}_J>0$ possono accrescere il protopianeta  cio\'e entro $w_{feed}=B_LR_H$, per orbite circolari $B_L=2\sqrt{3 }$.
 \end{workout}
 
 \begin{workout}[runaway to oligarchic. Isolation mass]
- NEW CONDITION FOR THE TRANSITION FROM RUNAWAY TO OLIGARCHIC GROWTH (Ormel 10)
- \begin{equation}
-M_{iso}\propto M_*\expy{-1/2}\Sigma_p\expy{3/2}r^3
-\end{equation}
-$0.07\mearth{}$ 1AU, $9\mearth{}$ 5 AU.
-Accretion among preplanetary bodies: runaway growth, summary of collision interactions
-Understanding how planets become massive
+	NEW CONDITION FOR THE TRANSITION FROM RUNAWAY TO OLIGARCHIC GROWTH (Ormel 10)
+	\begin{equation}
+	M_{iso}\propto M_*\expy{-1/2}\Sigma_p\expy{3/2}r^3
+	\end{equation}
+	$0.07\mearth{}$ 1AU, $9\mearth{}$ 5 AU.
+	Accretion among preplanetary bodies: runaway growth, summary of collision interactions
+	Understanding how planets become massive
 \end{workout}
-  
+
 \begin{workout}[Accrescimento pianetesimi: orderly, runaway, oligarchic]
-The growth of planetary embryos:  orderly, runaway, or oligarchic? (Rafikov 2002)
-\begin{align}
-\TDy{t}{M_e}\approx\pi R_e^2\Omega mN\frac{v}{v_z}[1+\frac{2GM_e}{R_ev^2}]
-\end{align}
-Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accrescimento runaway: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}$. Accrescimento oligarchico: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$.
+	The growth of planetary embryos:  orderly, runaway, or oligarchic? (Rafikov 2002)
+	\begin{align}
+		\TDy{t}{M_e}\approx\pi R_e^2\Omega mN\frac{v}{v_z}[1+\frac{2GM_e}{R_ev^2}]
+	\end{align}
+	Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accrescimento runaway: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{1/3}$. Accrescimento oligarchico: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$.
+\end{workout}
+
+\begin{workout}[oligarchic growth rate]
+	La fase successiva che porta a dimensioni di migliaia di chilometri, accrescimento oligarchico ha andamento in funzione della massa
+	\begin{equation}
+	\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}
+	\end{equation}
+	e tempo caratteritico $\SI{e5}{\year}$. Nel dettaglio \'e determinata 
+\end{workout}
+
+\begin{workout}[viscous stirring, Dynamical friction]
+	Una volta formato un corpo molto pi\'u massiccio degli altri (embrione planetario), l'equipartizione di energia tra il corpo massiccio e i planetesimi produce diminuzione di eccentricit\'a/inclinazione dell'embrione planetario a scapito di aumento di queste per i corpi di massa minore, questo fenomeno \'e detto dynamical friction.
+	
+	Dynamical friction: stewart wetherill 88
+\end{workout}
+
+\begin{workout}[Dynamical evolution of planetesimal swarm: refs]
+	Accretional evolution of planetesimal swarm (weidenschilling 97)
+	Goldreich 2004: Planet Formation by Coagulation: A Focus on Uranus and Neptune
+	Goldreich 04: FINAL STAGES OF PLANET FORMATION
+	rafikov 03: DYNAMICAL EVOLUTION OF PLANETESIMALS IN PROTOPLANETARY DISKS.
+	rafikov 02: The growth of planetary embryos: orderly, runaway, or oligarchic?
+	thommes 03: Oligarchic growth of giant planets
+\end{workout}
+
+\begin{workout}[10m-10km, 100km-1000km, 1000km-10000km: refs]
+	Lissauer pg 142-143
+	Perryman pg 226
+\end{workout}
+
+\begin{workout}[Planetesimal dynamics: viscous stirring]
+	The origin of anisotropic velocity dispersion of particles in a disc potential (Ida, Makino 93, Stewart-Wetherill 1988 Ida1990)
+\end{workout}
+
+\begin{workout}[Gravitational stirring: Viscous stirring and dynamical friction]
+	\begin{itemize}
+		\item Viscous stirring increses i,e
+		\item Dynamical stirring: tends to equalize energy of random motion among bodies having different masses and velocities
+	\end{itemize}
+\end{workout}
+
+\begin{workout}[orbital elements distribution: rayleigh distro]
+	I planetesimi hanno distribuzione di velocit\'a casuale, localmente equivalente a
+	\begin{equation}
+	f(e,i)=4\frac{\sigma}{m}\frac{ei}{\exv{e^2}\exv{i^2}}\Exp{[-\frac{e^2}{\exv{e^2}}-\frac{}{\exv{i^2}}]}
+	\end{equation}
+	\'e una distro gaussiana triassiale in coordinate cilindriche (Lissauer Stewart 93)
+	Lissauer pg 142-143
 \end{workout}
 
 \begin{workout}[Atmospheric drag increases accretion rate]
-
+	
 \end{workout}
 
-\begin{workout}[Some refs]
-	\begin{itemize}
-		\item ida, guillot, morbidelli 08: accretion and destruction of planetesimal in turbulent disks.
-		\item rafikov 04: Fast accretion of planetesimal by protoplanet cores. Drag regimes; mass spectrum of solid body
-		\item rafikov 02: growth of planetary embryos: orderly, runaway, or oligarchic?
-		\item kokubo ida 12: Dynamics and accretion of planetesimal. Tempi caratteristici.
-		\item hasegawa pudritz 14: planet traps and planet cores: origin of planet metallicity correlation.
-	\end{itemize}
-\end{workout}
 
 \begin{workout}[Initial planetesimal distro]
 	Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8)
@@ -251,26 +282,25 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 	Trapped evolution model: Hasegawa pudritz 11, Cridland 16
 \end{workout}
 
+%\section{Caratteristiche iniziali degli embrioni planetarii e accrescimento}
+
+%{\let\clearpage\relax\let\cleardoublepage\relax
+%\chapter{Schema di accrescimento componente solida: formazione planetesimi - da riassumere nel capitolo ''schema CA a volo d'uccello''}
+%}
+%\section{Sedimentazione polvere e formazione planetesimi}
+%Assumo  sedimenta verso il centro del disco e forma aggregati di dimensioni maggiori:
+%\section{Accrescimento planetesimi: formazione proto-pianeti.}
+%\subsection{Distribuzione velocit\'a planetesimi}
+%Refs: kokubo Ida 12 `'Dynamics and accretion of planetesimal''
+%e si ha equipartizione di energia tra pianetesimi di diversa massa
+%i planetesimi di massa minore hanno maggiore dispersione di velocit\'a 
+%due planetesimi hanno stessa velocit\'a relativa prima e dopo interazione ma aumenta la velocit\'a relativa al moto kepleriano in maniera casuale: 
+%\'E ragionevole supporre che si arrivi rapidamente alla condizione $v>\Omega R_H$.
+%v deviazione dei planetesimi da velocit\'a kepleriana
+%\subsection{Regimi accrescimento dei protopianeti}
+
 \begin{workout}[Planet host stars are enriched in nikel and silicon]
 	Robinson06
-\end{workout}
-
-\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
-	$b=10.4+\log{f}$
-\end{workout}
-
-\begin{workout}[Higher mass gap formation reduces accretion rate]
-	\begin{equation}
-	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
-	\end{equation}
-\end{workout}
-
-
-\begin{workout}[allargamento schema accrescimento parte solida]
-	\begin{itemize}
-		\item peebles: observations show that mm and smaller particles are retained in PPD (Cleeves16). Peebles remain coupled to gad -> areodynamic assisted or peeble accretion (Ormel klahr 10, Lambrechts jOhansen 12)
-		
-	\end{itemize}
 \end{workout}
 
 \begin{workout}[Refs GI vs CA]
@@ -383,6 +413,31 @@ Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fi
 Valori tipici sono $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$.
 
 Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente con le osservazioni  ed \'e omogeneo e costante.
+
+Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
+\begin{align}
+	&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
+	&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
+\end{align}
+dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
+
+\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
+	$b=10.4+\log{f}$
+\end{workout}
+
+\begin{workout}[Higher mass gap formation reduces accretion rate]
+	\begin{equation}
+	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
+	\end{equation}
+\end{workout}
+
+
+\begin{workout}[allargamento schema accrescimento parte solida]
+	\begin{itemize}
+		\item peebles: observations show that mm and smaller particles are retained in PPD (Cleeves16). Peebles remain coupled to gad -> areodynamic assisted or peeble accretion (Ormel klahr 10, Lambrechts jOhansen 12)
+		
+	\end{itemize}
+\end{workout}
 
 \begin{workout}[Some refs]
 	\begin{itemize}
