--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -60,16 +60,20 @@ Per le stelle campionate da CORALIE (\cite{udry2000coralie}, 1650 stelle nane en
 	\end{itemize}
 \end{workout}
 
-La distribuzione di velocit\'a dei planetesimi, che percorrono orbite kepleriane, evolve attraverso interazione con gas, che smorza eccentricit\'a e inclinazione, e scattering, che trasforma il moto kepleriano in casuale.
-La componente casuale della velocit\'a v dei planetesimi \'e approssimativamente
+La distribuzione di velocit\'a dei planetesimi evolve attraverso interazione con gas, che smorza eccentricit\'a e inclinazione, e interazioni a 2 corpi con altri planetesimi.
+Si definisce la componente casuale della velocit\'a v dei planetesimi rispetto a orbita kepleriana circolare
 \begin{equation}
-v\approx\sqrt{e^2+i^2}v_K
+v=\sqrt{e^2+i^2}v_K
 \end{equation}
 Un ensamble di planetesimi evolve tramite quello che viene definito viscous stirring verso configurazione di eccentricit\'a e inclinazione che seguano distribuzione di Rayleigh
 \begin{equation}
 f(e,i)=4\frac{\Sigma_p}{m}\frac{ei}{\exv{e^2}\exv{i^2}}\Exp{-\frac{e^2}{\exv{e^2}}-\frac{i^2}{\exv{i^2}}}
 \end{equation}
-e la dispersione di velocit\'a varia $\sigma\propto t\expy{1/4}$ fino a che non si raggiunge equilibrio con smorzamento da parte del disco di gas.
+e la dispersione di velocit\'a varia come
+\begin{equation}
+\sigma=\sqrt{\exv{e^2}+\exv{i^2}}v_K\propto t\expy{1/4}
+\end{equation}
+fino a che non si raggiunge equilibrio con smorzamento da parte del disco di gas.
 
 L'accrescimento di massa degli embioni planetari procede, in approssimazione di interazione a 2 corpi, secondo
 \begin{equation}
@@ -77,9 +81,9 @@ L'accrescimento di massa degli embioni planetari procede, in approssimazione di 
 \end{equation}
 con $F_g$ fattore che tiene conto dell'interazione gravitazionale
 \begin{equation}
-F_g=(1+(\frac{v_e}{v})^2)
+F_g=(1+(\frac{v_e}{v_{rel}})^2)
 \end{equation}
-$v$ velocit\'a relativa e $v_e$ velocit\'a di fuga, $\rho_{pl}$ densit\'a di planetesimi
+$v_{rel}\approx v$ velocit\'a relativa e $v_e$ velocit\'a di fuga, $\rho_{pl}$ densit\'a di planetesimi
 \begin{align}
 	&\rho_{pl}\approx\frac{\Sigma_p}{2a\sin{i}}=A\frac{\Sigma_p\Omega}{v}
 \end{align}
@@ -106,7 +110,7 @@ e $\Delta a_{stir}\propto\exv{e_M}\expy{1/2}\propto M_e\expy{1/3}$ \'e la larghe
 \begin{equation}
 \frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}\label{eq:oligarchicaccretion}
 \end{equation}
-La simulazione inizia quindi alla fine dell'accrescimento runaway con la determinazione della posizione iniziale degli embrioni planetari, di massa $\numrange{e-8}{e-2}\mearth$, scelta in maniera casuale: la probabilit\'a $p(a)\,da$ che l'embrione si sia formato in intervallo $da$ \'e inversamente proporzionale alla distanza orbitale $\Delta\propto a$ quindi la distribuzione \'e uniforme in $\log{a}$ tra \SIrange{0.05}{40}{\astronomicalunit}, verificato che il contenuto di solidi della sua fascia di accrescimento sia maggiore della sua massa:
+La simulazione inizia quindi alla fine dell'accrescimento runaway con la determinazione della posizione iniziale degli embrioni planetari, di massa fissata tra $\numrange{e-8}{e-2}\mearth$, scelta in maniera casuale: la probabilit\'a $p(a)\,da$ che l'embrione si sia formato in intervallo $da$ \'e inversamente proporzionale alla distanza orbitale $\Delta\propto a$ quindi la distribuzione \'e uniforme in $\log{a}$ nella range di semiassi maggiori scelti per la simulazione, qui \SIrange{0.05}{40}{\astronomicalunit}. Salvo verificare che il contenuto di solidi della sua fascia di accrescimento sia maggiore della sua massa:
 \begin{equation}
 M_{iso}=2\pi a_{start}B_LR_h\Sigma_p=\frac{(4\pi B_La_{start}^2\Sigma_p)\expy{3/2}}{(3M_*)\expy{1/2}}
 \end{equation}
@@ -115,7 +119,8 @@ L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento s
 \begin{equation}
 \dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pi a_p^2B_LM_p\expy{1/3}}\dot{M}_c\label{eq:surfaceplanetesimal}
 \end{equation}
-Il tempo di comparsa dell'embrione planetario, tempo per accrescere massa iniziale fissata, \'e determinato risolvendo \ref{eq:surfaceplanetesimal} e \ref{eq:Gaccretionpl}.
+Il tempo di comparsa dell'embrione planetario, tempo per accrescere massa iniziale fissata, \'e determinato risolvendo (\ref{eq:surfaceplanetesimal}) e (\ref{eq:Gaccretionpl}).
+La simulazione termina dopo \SI{10}{\mega\year}; la fase finale di crescita caotica evolve il sistema verso una configurazione dinamica stabile ed ha tempi tipici di \SIrange{10}{100}{\mega\year}.
 
 \begin{workout}[Calculation of planetesimal random velocity for accretion time]
 Pollack 96
@@ -126,9 +131,6 @@ Greenzweig Lissauer 92
 \tau_{acc}\approx\SI{1.2e5}{\year}(\frac{\Sigma_p}{\SI{10}{\gram\per\square\cm}})\expy{-1}(\frac{a_p}{\SI{1}{\astronomicalunit}})\expy{1/2}(\frac{M_c}{\mearth})\expy{1/3}(\frac{M_*}{\msun})\expy{-1/6}[(\frac{\Sigma_g}{\SI{2400}{\gram\per\square\cm}})\expy{-1/5}(\frac{a_p}{\SI{1}{\astronomicalunit}})\expy{1/20}(\frac{m}{\SI{e18}{\gram}})\expy{1/15}]^2
 \end{equation}
 \end{workout}
-La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano 20-50 embrioni di frazioni di massa terrestre ($0.01-0.1\mearth{}$); la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
-
-La simulazione termina dopo \SI{10}{\mega\year}; la fase finale di crescita caotica evolve il sistema verso una configurazione dinamica stabile ed ha tempi tipici di \SIrange{10}{100}{\mega\year}.
 
 % Costante proporzionalit\'a \'e $\frac{\sqrt{3}}{2}$ assumendo relazione di dispersione per velocit\'a planetesimi isotropa.
 %Per embrioni planetarii di decine di chilometri l'attrazione gravitazionale aumenta la sezione d'urto: 
@@ -391,28 +393,28 @@ La simulazione termina dopo \SI{10}{\mega\year}; la fase finale di crescita caot
 \end{workout}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Evoluzione struttura planetaria: accrescimento di gas. Evoluzione disco di accrescimento}\label{chap:gasaccretion}
+\chapter{Accrescimento di gas ed evoluzione disco di accrescimento}\label{chap:gasaccretion}
 }% e fase isolata
 
-Modelli pi\'u recenti  risolvono l'equazione per l'evoluzione viscosa:
-\begin{align}
-	&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
-	&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\quad a<R_g\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\quad \text{altrimenti}\\\end{array}\right.
-\end{align}
-con $\dot{\Sigma}_w$ contributo della foto-evaporazione (\cite{veras2004outward}), $R_g=\SI{5}{\astronomicalunit}$ e $a_{max}$ estremo del disco,  $\dot{\Sigma}_{embryo}$ contributo di accrescimento di gas e componente solida dei pianeti.
-La densit\'a superficiale iniziale \'e assunta essere:
-\begin{equation}
-\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
-\end{equation}
-dove i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
-
-La distribuzione di massa e la frazione di dischi protoplanetari per ammassi stellari di et\'a diversa \'e mostrata in figura (\ref{fig:initdistro}). La massa \'e determinata misurando il flusso di emissione termica della polvere: la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana corrispondente a massa media $M_{disk}=0.042\msun{}$.
+\section{Evoluzione disco di accrescimento}
 
 Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fissata $\alpha$ compatibile con tempo caratteristico osservato $\tau_{disk}^{obs}\approx\SI{3}{\mega\year}$ e assumendo la distribuzione uniforme nel logaritmo di $\dot{M}_w$, si calcola  $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ determinando gli estremi dello fotoevaporazione per riprodurre tempi di vita osservati.
 
 Valori tipici sono $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$.
 
 Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente con le osservazioni  ed \'e omogeneo e costante.
+
+Modelli considerati risolve l'equazione per l'evoluzione viscosa:
+\begin{align}
+	&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
+	&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\quad a<R_g\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\quad \text{altrimenti}\\\end{array}\right.
+\end{align}
+con $\dot{\Sigma}_w$ contributo della foto-evaporazione (\cite{veras2004outward}), $R_g=\SI{5}{\astronomicalunit}$ e $a_{max}$ estremo del disco,  $\dot{\Sigma}_{embryo}$ contributo di accrescimento di gas e componente solida dei pianeti.
+%La densit\'a superficiale iniziale \'e assunta essere:
+%\begin{equation}
+%\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
+%\end{equation}
+%dove i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
 
 Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
 \begin{align}
