--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -427,6 +427,13 @@ dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2
 	$b=10.4+\log{f}$
 \end{workout}
 
+\begin{workout}[X-ray photoevaporation]
+(owen12)
+thermal equilibrium: T of optically thin X-ray heated gas approx monotonic function of ionization parameter $\xi=\frac{L_X}{nr^2}$. The flow start subsonically at base of streamline and is accelerated by $g_{eff}$ and pressure gradient. Viscous effects are negligible: specific angular momentum of each element fluid is conserved being at keplerian value at launch from radius $R_b$ with value $h^2=GM_*R_b$:
+\[\vec{g}_{eff}=-\frac{GM_*}{r^2}\hat{r}+\frac{GM_*R_b}{R^3}\hat{R}\]
+where $\hat{r}$ and $\hat{R}$ are radial unit vector in spherical and cylindrical coordinate
+\end{workout}
+
 \begin{workout}[Higher mass gap formation reduces accretion rate]
 	\begin{equation}
 	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
