deja vu: checkout to detached head

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -432,9 +432,7 @@ Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fi
 
 Valori tipici sono $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$.
 
-Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente con le osservazioni  ed \'e omogeneo e costante.
-
-Modelli considerati risolve l'equazione per l'evoluzione viscosa:
+Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente con le osservazioni  ed \'e omogeneo e costante; l'evoluzione della densit\'a superficiale di gas si determina tramite:
 \begin{align}
 	&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
 	&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\quad a<R_g\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\quad \text{altrimenti}\\\end{array}\right.
