--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -426,7 +426,7 @@ Greenzweig Lissauer 92
 	\end{itemize}
 \end{workout}
 
-\section{Evoluzione disco di accrescimento}
+\section{Evoluzione disco di accrescimento (spostare nella parte struttura disco di accrescimento)}
 
 Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fissata $\alpha$ compatibile con tempo caratteristico osservato $\tau_{disk}^{obs}\approx\SI{3}{\mega\year}$ e assumendo la distribuzione uniforme nel logaritmo di $\dot{M}_w$, si calcola  $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ determinando gli estremi dello fotoevaporazione per riprodurre tempi di vita osservati.
 
@@ -461,7 +461,7 @@ Seguendo (\cite{mordasini2012characterization}) la struttura del pianeta \'e det
 &\TDy{r}{P}=-\frac{Gm}{r^2}\rho\\
 &\TDy{r}{T}=\frac{T}{P}\TDy{r}{P}\nabla(T,P)\\
 &\nabla(T,P)=\TDly{P}{T}=\min{(\nad{},\nrad{})}\\
-&(\PDy{r}{l}=4\pi r^2\rho(\epsilon-P\PDy{t}{V}-\PDy{t}{u}))
+%&(\PDy{r}{l}=4\pi r^2\rho(\epsilon-P\PDy{t}{V}-\PDy{t}{u}))
 \end{align}
 dove $\nrad{}$ e $\nad{}$ indicano il gradiente radiativo e adiabatico.
 
