--- a/seminario.bib
+++ b/seminario.bib
@@ -61,6 +61,16 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{fortier2013planet,
+	title={Planet formation models: the interplay with the planetesimal disc},
+	author={Fortier, Andrea and Alibert, Yann and Carron, F and Benz, Willy and Dittkrist, K-M},
+	journal={Astronomy \& Astrophysics},
+	volume={549},
+	pages={A44},
+	year={2013},
+	publisher={EDP Sciences}
+}
+
 @article{ida1993scattering,
 	title={Scattering of planetesimals by a protoplanet: Slowing down of runaway growth},
 	author={Ida, Shigeru and Makino, Junichiro},
@@ -526,6 +536,17 @@ pages={1282},
   pages={1257},
   year={2002},
   publisher={IOP Publishing}
+}
+
+@article{tanaka2004three,
+	title={Three-dimensional interaction between a planet and an isothermal gaseous disk. II. Eccentricity waves and bending waves},
+	author={Tanaka, Hidekazu and Ward, William R},
+	journal={The Astrophysical Journal},
+	volume={602},
+	number={1},
+	pages={388},
+	year={2004},
+	publisher={IOP Publishing}
 }
 
 @article{goldreich1980disk,
