fixin ides for migration

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -642,8 +642,18 @@ Nel modello di Berna si determina l'evoluzione orbitale degli embrioni planetari
 &\ddvec{r}_i^{\,i}=-\frac{(\dvec{x}_i\cdot\hat{z})}{t_i}\hat{z}
 \end{align}
 
+
 \begin{workout}[Magnitude torque type I/II and corotation]
-Lubow, ida: ''Planet migration'' eq 18-25 pg 6-7
+\cite{lubow2010planet}
+Lubow, ida: ''Planet migration'' eq 18-25 pg 6-7.
+Type I: $|T|\propto\Sigma_p\Omega_p^2a^4(\frac{M_p}{M_*})^2(\frac{a}{H})^2$ (collisionles particles)
+coorbital torque: $T_{co}\propto\dot{M}_o(1-\frac{\dot{M}_i}{\dot{M}_o})a\Omega_pw\approx\Sigma_g\Omega_p^2w^4\TDly{r}{(\Sigma_g/B)}$
+\cite{dittkrist2014impacts}: thermal, density structure
+Type II: $t_{vis}\propto\frac{a^2}{\nu}\approx\frac{a^2}{\alpha cH}\approx(\frac{a}{H})^2\frac{1}{\alpha\Omega_p}$ and gap opening conditions
+\begin{align*}
+&T_c\approx\Sigma_ga^2\Omega_p\nu\\
+	&T_o\geq T_c: \frac{M_p}{M_*}\geq C_g\sqrt{\frac{\nu}{a^2\Omega_p}}(\frac{H}{a})\expy{3/2}
+\end{align*}
 \end{workout}
 %{\let\clearpage\relax\let\cleardoublepage\relax
 %\chapter{N-body interactions inside proto disk}
