--- a/seminario.bib
+++ b/seminario.bib
@@ -71,6 +71,17 @@ pages={1282},
 	publisher={EDP Sciences}
 }
 
+@article{dittkrist2014impacts,
+	title={Impacts of planet migration models on planetary populations-Effects of saturation, cooling and stellar irradiation},
+	author={Dittkrist, K-M and Mordasini, C and Klahr, H and Alibert, Y and Henning, Th},
+	journal={Astronomy \& Astrophysics},
+	volume={567},
+	pages={A121},
+	year={2014},
+	publisher={EDP Sciences}
+}
+
+
 @article{ida1993scattering,
 	title={Scattering of planetesimals by a protoplanet: Slowing down of runaway growth},
 	author={Ida, Shigeru and Makino, Junichiro},
@@ -137,6 +148,16 @@ pages={1282},
   year={1999},
   publisher={IOP Publishing}
 }
+
+@article{lubow2010planet,
+	title={Planet migration},
+	author={Lubow, Stephen H and Ida, Shigeru},
+	journal={Exoplanets},
+	pages={347--371},
+	year={2010},
+	publisher={Arizona University Press Tucson}
+}
+
 
 @article{baraffe2009physical,
   title={The physical properties of extra-solar planets},
