--- a/seminario.bib
+++ b/seminario.bib
@@ -400,6 +400,17 @@ pages={1282},
   publisher={EDP Sciences}
 }
 
+@article{mordasini2012characterizationmassradius,
+	title={Characterization of exoplanets from their formation-II. The planetary mass-radius relationship},
+	author={Mordasini, C and Alibert, Yann and Georgy, C and Dittkrist, K-M and Klahr, H and Henning, Th},
+	journal={Astronomy \& Astrophysics},
+	volume={547},
+	pages={A112},
+	year={2012},
+	publisher={EDP Sciences}
+}
+
+
 
 @article{hayashi1981structure,
   title={Structure of the solar nebula, growth and decay of magnetic fields and effects of magnetic and turbulent viscosities on the nebula},
