--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -35,38 +35,44 @@ Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale d
 
 \section{Modello di Berna}
 
-
 \begin{figure}[!ht]
 	\begin{subfigure}{0.5\textwidth}
 		\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.99\textwidth]{initdistro}
-	\caption{Distribuzione caretteristiche dischi di accrescimento. Da \cite{mordasini2018planetary}.}\label{fig:initdistro}
+		\caption{Distribuzione caratteristiche dischi di accrescimento: Metallicit\'a, Massa del disco, Massa della componente solida, frazione di stelle che mantengono disco di accrescimento in funzione dell'et\'a dell'ammasso. Da \cite{mordasini2018planetary}.}\label{fig:initdistro}
 	\end{subfigure}
-\begin{subfigure}{0.5\textwidth}
-\includegraphics[trim={9cm 5.5cm 10cm 0.5cm},clip, keepaspectratio, width=0.99\textwidth]{GFM}
-\caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
-	Da \cite{benz2014planet}.}\label{fig:GFM}
-\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[trim={9cm 5.5cm 10cm 0.5cm},clip, keepaspectratio, width=0.99\textwidth]{GFM}
+		\caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
+			Da \cite{benz2014planet}.}\label{fig:GFM}
+	\end{subfigure}
 \end{figure}
 
 %\begin{wrapfigure}[22]{l}{0.7\textwidth}
+\begin{wrapfigure}[10]{l}{0.5\textwidth}
+	\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
+	\caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni (\cite{mortier2013functional}). Da \cite{mordasini2018planetary}. }\label{fig:giant-Zsynth}
+\end{wrapfigure}
 
-La struttura del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari  principalmente tramite la densit\'a di planetesimi: posizione dell'iceline ($H_2O$) fissa \'e coerente con assunzione di trasformazione totalit\'a componente solida in planetesimi.
-\'E possibile tenere traccia della frazione di rocce o ghiacci accresciuti: la figura \ref{fig:MR5Gyrppsobs} mostra la posizione nel diagramma massa-raggio di una popolazione sintetica con quella di pianeti reali. La fase di contrazione post-formazione \'e determinata considerando l'evoluzione de
+Le caratteristiche del disco protoplanetario determina la rapidit\'a di accrescimento degli embrioni planetari  principalmente tramite la densit\'a di planetesimi: posizione dell'iceline ($H_2O$) fissa \'e coerente con approssimazione di trasformazione totalit\'a componente solida in planetesimi. La figura (\subref{fig:initdistro}) mostra la distribuzioni delle principali condizioni iniziali per la simulazione.
+\'E possibile tenere traccia della frazione di rocce o ghiacci accresciuti: la figura (\ref{fig:MR5Gyrppsobs}) mostra la posizione nel diagramma massa-raggio di una popolazione sintetica sovrapposta a quella di pianeti reali. La fase di contrazione post-formazione \'e determinata considerando l'evoluzione dell'irraggiamento stellare e l'evaporazione dovuta a componente energetica della radiazione stellare.
 
 %LBRT
 \begin{figure}[!ht]
 		\centering
-		\includegraphics[trim={0.8cm 2.8cm 0.5cm 0.4cm},clip, width=0.99\textwidth,keepaspectratio]{MR5Gyrppsobs}
-		\caption{Popolazione planetaria sintetica nel diagramma massa-raggio a $t=\SI{5}{\giga\year}$. Colore indica frazione di metalli: Arancio $Z<1\%$, Rosso $1\%<Z<5\%$, Verde $5\%<Z<20\%$, Blu $20\%<Z<40\%$, Celeste $40\%<Z<60\%$, Magenta $60\%<Z<80\%$, Giallo $80\%<Z<95\%$, Marrone $95\%<Z<99\%$, Nero $Z>99\%$. Da \cite{mordasini2012characterizationmassradius}. }\label{fig:MR5Gyrppsobs}
+		\includegraphics[trim={0.8cm 2.8cm 0.5cm 0.2cm},clip, width=0.99\textwidth,keepaspectratio]{MR5Gyrppsobs}
+		\caption{Popolazione planetaria sintetica nel diagramma massa-raggio a $t=\SI{5}{\giga\year}$ messa a confronto con posizione dei pianeti per cui sono noti massa e raggio. Colore indica frazione di metalli: Arancio $Z<1\%$, Rosso $1\%<Z<5\%$, Verde $5\%<Z<20\%$, Blu $20\%<Z<40\%$, Celeste $40\%<Z<60\%$, Magenta $60\%<Z<80\%$, Giallo $80\%<Z<95\%$, Marrone $95\%<Z<99\%$, Nero $Z>99\%$. Da \cite{mordasini2012characterizationmassradius}. }\label{fig:MR5Gyrppsobs}
 \end{figure}
 
 \begin{workout}[Radius of planet diminish as core mass increases]
 Characterization of exoplanets from their formation I:  radii pg 15
 \end{workout}
 
-Lo scambio di momento angolare dovuto all'interazione gravitazionale tra disco e pianeta provoca la migrazione planetaria 
+%Lo scambio di momento angolare dovuto all'interazione gravitazionale tra disco e pianeta provoca la migrazione planetaria 
 
-Se l'embrione planetario accresce abbastanza massa si forma un inviluppo gassoso che inzialmente si raccorda alle condizioni del disco e alla saturazione della capacit\'a del disco di fornire gas si stacca dal disco: la struttura del pianeta \'e quindi determinata da massa, raggio e luminosit\'a del core, massa gassosa legata al pianeta, energia rilasciata da accrescimento planetesimi e gas.
+Se l'embrione planetario accresce abbastanza massa si forma un inviluppo gassoso; nella figura (\ref{fig:envelopecoresynth}) la linea continua rappresenta un fit della dipendenza della massa dell'inviluppo gassoso vs massa del core solido per la popolazione sintetica: per opacit\'a $\num{0.003}\kappa_{gr}$, dove $\kappa_{gr}$ \'e l'opacit\'a dei grani dell'ISM (\cite{mordasini2014grain}), si ha $M_e\propto M_c\expy{2.5}$.
+La massa critica per accrescimento runaway \'e fra $\numrange{5}{20}\mearth{}$ quindi, se il core dell'embrione planetario raggiunge questa massa si ha rapido accrescimento del gas disponibile nel disco di accrescimento fino alla creazione di un gap attorno all'orbita del pianeta: in questo regime l'accrescimento di gas \'e regolato da evoluzione viscosa del disco. La rapidit\'a dell'accrescimento runaway rispetto ai tempi di evoluzione del disco protoplanetario determinano uno spopolamento della regione di massa compresa tra la massa critica e la massa raggiunta dalla popolazione dei giganti gassosi.
+
+%la struttura del pianeta \'e quindi determinata da massa, raggio e luminosit\'a del core, massa gassosa legata al pianeta, energia rilasciata da accrescimento planetesimi e gas.
 
 %La capacit\'a del pianeta di accrescere planetesimi aumenta con l'aumentare della massa e del raggio del pianeta.
 
@@ -138,36 +144,38 @@ La figura (\subref{fig:ma-synth}) mostra la distribuzione della popolazione sint
 
 Alcune caratteristiche dell'ensemble sintetico: %(\cite{mordasini2018planetary}):
 \begin{itemize}
-\item Numerosi sistemi costituiti da pianeti di piccola massa (\numrange{0.1}{10}$\mearth{}$)
-\item Sistemi con pianeti di piccola massa e giganti. Sistemi che mimano il sistema solare con andamento di massa piccolo-massiccio-piccolo (sweet spot per formazione di pianeti giganti \'e all'esterno dell'ice-line).
-\item L'architettura dei pianeti giganti varia notevolmente ma quello pi\'u vicino alle stella \'e distanza di circa \SI{1}{\astronomicalunit}, o meno, dalla stella.
-\item Piccola percentuale di sistemi con un pianeta gigante superstite di scattering tra pianeti giganti vicini. Sistemi rari formati in dischi massicci con alta metallicit\'a.
+\item Numerosi sistemi costituiti da pianeti di piccola massa (\numrange{0.1}{10}$\mearth{}$): dischi protoplanetari con bassa densit\'a superficiale e corto tempo di vita ma anche alta metallicit\'a; i sistemi sono caratterizzati da scarsa migrazione e interazione dinamica.
+\item Sistemi con pianeti di piccola massa e giganti. Sistemi che mimano il sistema solare con andamento di massa piccolo-massiccio-piccolo: infatti all'interno si ha scarsa disponibilit\'a di componente solida, sweet spot per formazione di pianeti giganti \'e all'esterno dell'ice-line, e oltre l'accrescimento \'e lento. Numero di pianeti giganti da 1 a 5 con il pi\'u interno attorno a \SI{1}{\astronomicalunit}: l'architettura dei pianeti giganti varia notevolmente, l'eccentricit\'a \'e nel range tra $e=\numrange{0}{2}$.
+\item Piccola percentuale di sistemi con un pianeta gigante superstite di scattering tra pianeti giganti vicini. Sistemi rari formati in dischi massicci con alta metallicit\'a. Tipicamente $M_p\approx30\mjupiter{}$, $a\approx\SIrange{20}{50}{\astronomicalunit}$.
 %\item Popolazione di pianeti tra $\numrange{30}{100}\mearth{}$: i fattori che influenzano la popolazione di pianeti di massa intermedia sono la massa presente nel disco quando il protopianeta raggiunge la massa critica per accrescimento di gas, il tempo-scala di rilassamento radiativo e competizione per accrescimento di gas tra protopianeti giganti.
 \end{itemize}
 %saturazione momento di corotazione
 
-	\begin{figure}[!ht]
-	\includegraphics[trim={0.6cm 11cm 0.8cm 0.4cm},clip, keepaspectratio, width=0.99\textwidth]{Ra-synth}
-	\caption{
-		Da \cite{mordasini2018planetary}.}\label{fig:Ra-synth}
-\end{figure}
-
-Inoltre in figura (\ref{fig:ma-synth}) \'e evidente l'effetto della migrazione rapida all'interno: popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che migrano all'interno accumulando materiale roccioso (frazione ghiaccio nel core $10-20\%$).
-
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}
-\caption{Distribuzione di massa, semiasse, luminosit\'a, raggio. Da \cite{mordasini2018planetary}. }\label{fig:MaLR-freq-synth}
+	\includegraphics[trim={0.6cm 11cm 0.8cm 0.4cm},clip, keepaspectratio, width=0.99\textwidth]{Ra-synth}
+	\caption{Distribuzione della popolazione sintetica planetaria nel diagramma semiasse maggiore vs raggio. Da \cite{mordasini2018planetary}.}\label{fig:Ra-synth}
 \end{figure}
+
+In figura (\subref{fig:ma-synth}) e (\cite{fig:Ra-synth}) \'e evidente l'effetto della migrazione: popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che migrano all'interno accumulando materiale roccioso (frazione ghiaccio nel core $10-20\%$). Inoltre nel diagramma semiasse maggiore vs raggio si confronta fit sperimentale della ''valle dell'evaporazione'' (\cite{van2018asteroseismic}) con la fascia depopolata decrescente fino a \SI{1}{\astronomicalunit} che viste le semplificazioni del modello di evaporazione risulta pi\'u ripida.
+
+\clearpage
 
 \section{Caratteristiche delle distribuzioni delle propriet\'a fisiche dei pianeti e significativit\'a}
 
-La figura (\ref{fig:MaLR-freq-synth}) mostra la distribuzione di massa di 509 pianeti della popolazione sintetica di \cite{mordasini2018planetary}. La distribuzione della massa dei pianeti ha andamento diverso per pianeti fino a $30\mearth{}$ formati principalmente da solidi e pianeti che hanno raggiunto la massa critica per l'accrescimento di gas runaway.
+\begin{figure}[!ht]
+	\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}
+	\caption{Distribuzione di massa, semiasse, luminosit\'a, raggio. Da \cite{mordasini2018planetary}. }\label{fig:MaLR-freq-synth}
+\end{figure}
+
+%La figura (\ref{fig:MaLR-freq-synth}) mostra la distribuzione di massa di 509 pianeti della popolazione sintetica di \cite{mordasini2018planetary}.
+La distribuzione della massa dei pianeti ha andamento diverso per pianeti fino a $30\mearth{}$ formati principalmente da solidi e pianeti che hanno raggiunto la massa critica per l'accrescimento di gas runaway.
 %La differente slope della distribuzione di massa nelle due regioni caratterizza i differenti meccanismi di accrescimento.
 Si ha un minimo locale attorno alla massa critica dopo di che l'aumento di massa \'e molto veloce verso piccole masse. I risultati sono significativi per masse maggiori delle masse dell'embrione iniziale.
 
-La distribuzione del raggio dei pianeti mostra picco a $1\rjupiter$ e crescita per piccoli raggi dovuta al loro lungo $\tkh{}$ e quindi scarso accrescimento di H/He.
+La distribuzione del raggio dei pianeti mostra picco a $1\rjupiter$ e crescita per piccoli raggi dovuta alla prevalenza di pianeti di piccola massa, al loro lungo $\tkh{}$ e quindi scarso accrescimento di H/He.
 
-La distribuzione dei semi-assi cresce rapidamente tra $0.01-0.1\si{\astronomicalunit}$, resta uniforme in log tra $0.1-10\si{\astronomicalunit}$ nonostante molti pianeti migrino all'interno,mentre i pianeti giganti sono ristretti in \SIrange{0.1}{6}{\astronomicalunit}. La distribuzioni del semiasse non mostra deviazioni dalla distribuzione iniziale.
+La distribuzione dei semi-assi cresce rapidamente tra $0.01-0.1\si{\astronomicalunit}$, resta uniforme in log tra $0.1-10\si{\astronomicalunit}$ nonostante molti pianeti migrino all'interno,mentre i pianeti giganti sono ristretti in \SIrange{0.1}{6}{\astronomicalunit}. La distribuzioni del semiasse \'e approssimativamente uniforme in $\log{a}$ per pianeti con $1\mearth{}<M_p<30\mearth{}$: la non comparsa di strutture significative suggerisce che il risultato della simulazione in questo caso sia influenza dalla distribuzione iniziale. Altre distribuzioni iniziali iniziali proposte sono:
+m18 pg 35
 
 %{\let\clearpage\relax\let\cleardoublepage\relax
 %\chapter{Confronto semi-quantitativo tra caratteristiche popolazioni sintetiche e osservate}
@@ -200,14 +208,10 @@ La tabella (\ref{tab:planetfreq}) mostra un buon accordo tra teoria e osservazio
 
 Il confronto della distribuzione di massa tra teorica e osservata mostra il buon accordo della pendenza nei due regimi di accrescimento e della posizione della massa critica. Per quanto riguarda la distribuzione dei raggi planetarii il picco a $1\rjupiter{}$ \'e meno pronunciato perch\'e sono inclusi solo pianeti giganti vicini e la distribuzione sintetica cresce meno rapidamente a piccoli raggi. Infine il gran numero di pianeti terrestri della popolazione sintetica pu\'o collidere dando luogo a pianeti pi\'u massicci tuttavia le interazioni dinamiche sono simulate solo per il tempo di vita del disco.
 
-\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\label{fig:MR-freq-obssynth}\end{figure}
+\begin{figure}[!ht]\includegraphics[trim={0cm 17cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\caption{Distribuzioni di massa e raggio per popolazione planetaria sintetica (linea nera) e distribuzioni osservate tramite RV e transiti (linea blu) corrette per i bias. Da \cite{mordasini2018planetary}.}\label{fig:MR-freq-obssynth}
+\end{figure}
 
 La probabilit\'a di osservare pianeti giganti aumenta con la metallicit\'a: la figura (\ref{fig:giant-Zsynth}) mostra che l'incremento relativo \'e in accordo con le osservazioni.
-
-\begin{figure}[!ht]
-\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
-\caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni. Da \cite{mordasini2018planetary}. }\label{fig:giant-Zsynth}
-\end{figure}
 
 \begin{workout}[Distro luminosit\'a: relazione M-L]
 	La distribuzione di luminosit\'a segue andamento $L\propto M^2$ con terzo picco per innesco deuterio a $\log{\frac{L}{\lsun}}\approx-3.5$
