--- a/seminario.bib
+++ b/seminario.bib
@@ -346,6 +346,15 @@ pages={1282},
 	publisher={EDP Sciences}
 }
 
+@article{mortier2013functional,
+	title={On the functional form of the metallicity-giant planet correlation},
+	author={Mortier, A and Santos, NC and Sousa, S and Israelian, G and Mayor, Michel and Udry, St{\'e}phane},
+	journal={Astronomy \& Astrophysics},
+	volume={551},
+	pages={A112},
+	year={2013},
+	publisher={EDP Sciences}
+}
 
 @article{kornet2004alternative,
   title={An alternative look at the snowline in protoplanetary disks},
@@ -409,8 +418,6 @@ pages={1282},
 	year={2012},
 	publisher={EDP Sciences}
 }
-
-
 
 @article{hayashi1981structure,
   title={Structure of the solar nebula, growth and decay of magnetic fields and effects of magnetic and turbulent viscosities on the nebula},
@@ -507,6 +514,15 @@ pages={1282},
   author={Crida, Aur{\'e}lien},
   year={2006},
   school={Universit{\'e} Nice Sophia Antipolis}
+}
+
+@article{van2018asteroseismic,
+	title={An asteroseismic view of the radius valley: stripped cores, not born rocky},
+	author={Van, Eylen V and Agentoft, C and Lundkvist, MS and Kjeldsen, H and Owen, JE and Fulton, BJ and Petigura, E and Snellen, IAG and others},
+	journal={Monthly Notices of the Royal Astronomical Society},
+	volume={479},
+	pages={10},
+	year={2018}
 }
 
 @article{mordasini2014grain,
